# logos-qt-sdk

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
core/: interface.h
cpp/: CMakeLists.txt  logos-qt-sdkConfig.cmake.in  logos_api.cpp  logos_api.h  logos_api_provider.cpp  logos_api_provider.h  logos_provider_object.cpp  logos_provider_object.h  logos_ui_plugin_context.h  qt_provider_object.cpp  qt_provider_object.h
nix/: default.nix  include.nix  lib.nix  qt-generator.nix  tests.nix
qt-generator/: CMakeLists.txt  lidl_gen_cdylib_glue.cpp  lidl_gen_cdylib_glue.h  lidl_gen_provider.cpp  lidl_gen_provider.h  lidl_gen_ui.cpp  lidl_gen_ui.h  main.cpp
tests/: CMakeLists.txt
tests/qt-sdk/: CMakeLists.txt  event_test_helpers.h  test_async_calls.cpp  test_auth_token_enforcement.cpp  test_event_system.cpp  test_inform_module_token_auth.cpp  test_local_transport_integration.cpp  test_logos_api.cpp  test_logos_api_client_mock.cpp  test_logos_api_client_overloads.cpp  test_logos_api_provider.cpp  test_logos_mock_setup.cpp  test_logos_provider_base.cpp  test_logos_result.cpp  test_main.cpp  test_module_proxy.cpp  test_provider_dispatch.cpp  test_std_string_overloads.cpp  test_worker_thread_ipc.cpp
tests/qt-sdk/fixtures/: sample_provider.cpp  sample_provider.h
